# RDM

./: .gitattributes  .gitignore  App.xaml  App.xaml.cs  CHANGELOG.md  README.md  RemoteManager.csproj  RemoteManager.slnx  Usings.cs  index.html  installer.iss  package-lock.json  package.json
Controls/: RdpHost.cs  SshTerminalControl.cs  SshWebViewTerminalControl.cs  TerminalControl.cs
Converters/: BoolToVisibilityConverter.cs  ConnectionTypeConverters.cs  NullToVisibilityConverter.cs  SshAuthTypeToVisibilityConverter.cs  StatusDotConverter.cs  TabMarginConverter.cs  TypeToColorConverter.cs
Helpers/: CredentialResolver.cs  CryptoHelper.cs  EncryptionHelper.cs  ImportPreviewHelper.cs  L.cs  PasswordBoxHelper.cs
Models/: AppSettings.cs  Connection.cs  ExportData.cs  Snippet.cs  SshAuthType.cs
RemoteManager/: RemoteManager.csproj
RemoteManager.Tests/: ConnectionEditTests.cs  CredentialManagerTests.cs  CredentialResolverTests.cs  DatabaseServiceTests.cs  ImportExportTests.cs  RemoteManager.Tests.csproj  SettingsServiceTests.cs
Services/: CredentialManager.cs  CredentialService.cs  DatabaseService.cs  ICredentialService.cs  IDatabaseService.cs  IImportExportService.cs  IMasterPasswordProvider.cs  IPingService.cs  ISettingsService.cs  ImportExportService.cs  Log.cs  MasterPasswordContext.cs  PingService.cs  SettingsService.cs  WakeOnLanService.cs
Themes/: Generic.xaml
ViewModels/: ConnectionEditViewModel.cs  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs  rdp.rs  sftp.rs  ssh.rs
src-tauri/src/RdpHost/: Program.cs  RdpHost.csproj
(+83 files in other folders)
