[package]
name = "rdm-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rdm_manager_lib"
crate-type = ["rlib"]



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
portable-pty = "0.8.1"
hex = "0.4.3"
uuid = { version = "1.8.0", features = ["v4"] }
csv = "1.3.0"
rfd = "0.14.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Input_KeyboardAndMouse"] }
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Ole"] }
windows-core = "0.58"
windows-interface = { version = "0.58" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package."*"]
opt-level = 3
